--- a/app/views/supervisor/analytics.html.erb
+++ b/app/views/supervisor/analytics.html.erb
@@ -124,6 +124,14 @@
 
             <!-- USUARIOS SEMANAL -->
 
+            <div class="element usuarios semanal Enero-2013" >
+              <p> Usuarios</p>
+              <a href="http://50.116.21.144/users-20130124-20130131.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>24 al 31 de diciembre</p>
+            </div>
+
             <div class="element usuarios semanal Enero-2013" > 
               <p> Usuarios</p>
               <a href="http://50.116.21.144/users-20130117-20130124.csv"  title="Reporte de Usuarios">
@@ -172,7 +180,16 @@
               <p>13 al 20 de diciembre</p>
             </div>
 
+
             <!-- USUARIOS QUINCENALES -->
+
+            <div class="element usuarios quincenal Enero-2013" >
+              <p> Usuarios</p>
+              <a href="http://50.116.21.144/users-20130115-20130131.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>15 al 31 de enero</p>
+            </div>
 
             <div class="element usuarios quincenal Enero-2013" >
               <p> Usuarios</p>
@@ -192,6 +209,14 @@
 
             <!-- USUARIOS MENSUALES -->
 
+            <div class="element usuarios mensual Enero-2013" >
+              <p> Usuarios</p>
+              <a href="http://50.116.21.144/users-20130101-20130131.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>01 al 31 de enero</p>
+            </div>
+
             <div class="element usuarios mensual Diciembre-2012" >
               <p> Usuarios</p>
               <a href="http://50.116.21.144/users-20121212-20121231.csv">
@@ -201,6 +226,14 @@
             </div>
 
             <!-- POSTS SEMANALES -->
+
+            <div class="element posts semanal Enero-2013" >
+              <p> Posts</p>
+              <a href="http://50.116.21.144/posts-20130124-20130131.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>24 al 31 de enero</p>
+            </div>
 
             <div class="element posts semanal Enero-2013" > 
               <p> Posts</p>
@@ -254,6 +287,14 @@
 
             <div class="element posts quincenal Enero-2013" >
               <p> Posts </p>
+              <a href="http://50.116.21.144/posts-20130115-20130131.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>15 al 31 de enero</p>
+            </div>
+
+            <div class="element posts quincenal Enero-2013" >
+              <p> Posts </p>
               <a href="http://50.116.21.144/posts-20130101-20130115.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -270,6 +311,14 @@
 
             <!-- POSTS MENSUALES -->
 
+            <div class="element posts mensual Enero-2013" >
+              <p> Posts </p>
+              <a href="http://50.116.21.144/posts-20130101-20130131.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>01 al 31 de enero</p>
+            </div>
+
             <div class="element posts mensual Diciembre-2012" >
               <p> Posts </p>
               <a href="http://50.116.21.144/posts-20121212-20121231.csv">
@@ -279,6 +328,14 @@
             </div>
 
             <!-- LOGINS SEMANALES -->
+
+            <div class="element logins semanal Enero-2013" >
+              <p> Logins </p>
+              <a href="http://50.116.21.144/logins-20130124-20130131.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>24 al 31 de enero</p>
+            </div>
 
             <div class="element logins semanal Enero-2013" > 
               <p> Logins </p>
@@ -332,6 +389,14 @@
 
             <div class="element logins quincenal Enero-2013" >
               <p> Logins</p>
+              <a href="http://50.116.21.144/logins-20130115-20130131.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>15 al 31 de enero</p>
+            </div>
+
+            <div class="element logins quincenal Enero-2013" >
+              <p> Logins</p>
               <a href="http://50.116.21.144/logins-20130101-20130115.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -347,6 +412,14 @@
             </div>
 
             <!-- LOGINS MENSUALES -->
+
+            <div class="element logins mensual Enero-2013" >
+              <p> Logins</p>
+              <a href="http://50.116.21.144/logins-20130101-20130131.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>01 al 31 de enero</p>
+            </div>
      
             <div class="element logins mensual Diciembre-2012" >
               <p> Logins</p>
@@ -357,6 +430,14 @@
             </div>
 
             <!-- DISPOSITIVOS SEMANAL -->
+
+            <div class="element dispositivos semanal Enero-2013" >
+              <p> Dispositivos</p>
+              <a href="http://50.116.21.144/devices-20130124-20130131.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>24 al 31 de enero</p>
+            </div>
 
             <div class="element dispositivos semanal Enero-2013" > 
               <p> Dispositivos</p>
@@ -407,6 +488,14 @@
             </div>
 
             <!-- DISPOSITIVOS QUINCENAL -->
+
+            <div class="element dispositivos quincenal Enero-2013" >
+              <p> Dispositivos</p>
+              <a href="http://50.116.21.144/devices-20130115-20130131.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>15 al 31 de enero</p>
+            </div>
  
             <div class="element dispositivos quincenal Enero-2013" >
               <p> Dispositivos</p>
@@ -425,6 +514,14 @@
             </div>
 
             <!-- DISPOSITIVOS MENSUAL -->
+
+            <div class="element dispositivos mensual Enero-2013" >
+              <p> Dispositivos</p>
+              <a href="http://50.116.21.144/devices-20130101-20130131.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>01 al 31 de enero</p>
+            </div>
  
             <div class="element dispositivos mensual Diciembre-2012" >
               <p> Dispositivos</p>
@@ -435,6 +532,14 @@
             </div>
 
             <!-- POST/COMENTARIOS -->
+
+            <div class="element post_comentarios semanal Enero-2013" >
+              <p> Post/Comentarios</p>
+              <a href="http://50.116.21.144/most_commented-20130124-20130131.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>24 al 31 de enero</p>
+            </div>
 
             <div class="element post_comentarios semanal Enero-2013" > 
               <p> Post/Comentarios</p>
@@ -488,6 +593,14 @@
 
             <div class="element post_comentarios quincenal Enero-2013" >
               <p> Post/Comentarios</p>
+              <a href="http://50.116.21.144/most_commented-20130115-20130131.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>15 al 31 de enero</p>
+            </div>
+
+            <div class="element post_comentarios quincenal Enero-2013" >
+              <p> Post/Comentarios</p>
               <a href="http://50.116.21.144/most_commented-20130101-20130115.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -503,6 +616,14 @@
             </div>
 
             <!-- POST/COMENTARIOS MENSUAL -->
+
+            <div class="element post_comentarios mensual Enero-2013" >
+              <p> Post/Comentarios</p>
+              <a href="http://50.116.21.144/most_commented-20130101-20130131.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>01 al 31 de enero</p>
+            </div>
   
             <div class="element post_comentarios mensual Diciembre-2012" >
               <p> Post/Comentarios</p>
