se agregan reportes semanales febrero

--- a/app/views/supervisor/analytics.html.erb
+++ b/app/views/supervisor/analytics.html.erb
@@ -124,12 +124,20 @@
 
             <!-- USUARIOS SEMANAL -->
 
+            <div class="element usuarios semanal Febrero-2013" >
+              <p> Usuarios</p>
+              <a href="http://50.116.21.144/users-20130131-20130207.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>24 de enero al 07 de febrero</p>
+            </div>
+
             <div class="element usuarios semanal Enero-2013" >
               <p> Usuarios</p>
               <a href="http://50.116.21.144/users-20130124-20130131.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
-              <p>24 al 31 de diciembre</p>
+              <p>24 al 31 de enero</p>
             </div>
 
             <div class="element usuarios semanal Enero-2013" > 
@@ -180,7 +188,6 @@
               <p>13 al 20 de diciembre</p>
             </div>
 
-
             <!-- USUARIOS QUINCENALES -->
 
             <div class="element usuarios quincenal Enero-2013" >
@@ -226,6 +233,14 @@
             </div>
 
             <!-- POSTS SEMANALES -->
+
+            <div class="element posts semanal Enero-2013" >
+              <p> Posts</p>
+              <a href="http://50.116.21.144/posts-20130131-20130207.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>31 de enero al 07 de febrero al 07 de febrero</p>
+            </div>
 
             <div class="element posts semanal Enero-2013" >
               <p> Posts</p>
@@ -331,6 +346,14 @@
 
             <div class="element logins semanal Enero-2013" >
               <p> Logins </p>
+              <a href="http://50.116.21.144/logins-20130131-20130207.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>31 de enero al 7 de febrero</p>
+            </div>
+
+            <div class="element logins semanal Enero-2013" >
+              <p> Logins </p>
               <a href="http://50.116.21.144/logins-20130124-20130131.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -433,6 +456,14 @@
 
             <div class="element dispositivos semanal Enero-2013" >
               <p> Dispositivos</p>
+              <a href="http://50.116.21.144/devices-20130131-20130207.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>31 de enero al 7 de febrero</p>
+            </div>
+
+            <div class="element dispositivos semanal Enero-2013" >
+              <p> Dispositivos</p>
               <a href="http://50.116.21.144/devices-20130124-20130131.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -532,6 +563,14 @@
             </div>
 
             <!-- POST/COMENTARIOS -->
+
+            <div class="element post_comentarios semanal Enero-2013" >
+              <p> Post/Comentarios</p>
+              <a href="http://50.116.21.144/most_commented-20130131-20130207.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>31 de enero al 07 de febrero</p>
+            </div>
 
             <div class="element post_comentarios semanal Enero-2013" >
               <p> Post/Comentarios</p>
