Se corrigen fechas

--- a/app/views/supervisor/analytics.html.erb
+++ b/app/views/supervisor/analytics.html.erb
@@ -234,7 +234,7 @@
 
             <!-- POSTS SEMANALES -->
 
-            <div class="element posts semanal Enero-2013" >
+            <div class="element posts semanal Febrero-2013" >
               <p> Posts</p>
               <a href="http://50.116.21.144/posts-20130131-20130207.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
@@ -344,7 +344,7 @@
 
             <!-- LOGINS SEMANALES -->
 
-            <div class="element logins semanal Enero-2013" >
+            <div class="element logins semanal Febrero-2013" >
               <p> Logins </p>
               <a href="http://50.116.21.144/logins-20130131-20130207.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
@@ -454,7 +454,7 @@
 
             <!-- DISPOSITIVOS SEMANAL -->
 
-            <div class="element dispositivos semanal Enero-2013" >
+            <div class="element dispositivos semanal Febrero-2013" >
               <p> Dispositivos</p>
               <a href="http://50.116.21.144/devices-20130131-20130207.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
@@ -564,7 +564,7 @@
 
             <!-- POST/COMENTARIOS -->
 
-            <div class="element post_comentarios semanal Enero-2013" >
+            <div class="element post_comentarios semanal Febrero-2013" >
               <p> Post/Comentarios</p>
               <a href="http://50.116.21.144/most_commented-20130131-20130207.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
