se actualiza vista con los reportes semanales

--- a/app/views/supervisor/analytics.html.erb
+++ b/app/views/supervisor/analytics.html.erb
@@ -125,7 +125,15 @@
             <!-- USUARIOS SEMANAL -->
 
             <div class="element usuarios semanal Febrero-2013" >
-              <p> Usuarios</p>
+              <p>Usuarios</p>
+              <a href="http://50.116.21.144/users-20130207-20130214.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>7 al 14 de febrero</p>
+            </div>
+
+            <div class="element usuarios semanal Febrero-2013" >
+              <p>Usuarios</p>
               <a href="http://50.116.21.144/users-20130131-20130207.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -133,7 +141,7 @@
             </div>
 
             <div class="element usuarios semanal Enero-2013" >
-              <p> Usuarios</p>
+              <p>Usuarios</p>
               <a href="http://50.116.21.144/users-20130124-20130131.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -236,10 +244,18 @@
 
             <div class="element posts semanal Febrero-2013" >
               <p> Posts</p>
+              <a href="http://50.116.21.144/posts-20130207-20130214.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>7 al 14 de febrero</p>
+            </div>
+
+            <div class="element posts semanal Febrero-2013" >
+              <p> Posts</p>
               <a href="http://50.116.21.144/posts-20130131-20130207.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
-              <p>31 de enero al 07 de febrero al 07 de febrero</p>
+              <p>31 de enero al 07 de febrero</p>
             </div>
 
             <div class="element posts semanal Enero-2013" >
@@ -299,7 +315,7 @@
             </div>
 
             <!-- POSTS QUINCENALES -->
-
+             
             <div class="element posts quincenal Enero-2013" >
               <p> Posts </p>
               <a href="http://50.116.21.144/posts-20130115-20130131.csv">
@@ -343,6 +359,14 @@
             </div>
 
             <!-- LOGINS SEMANALES -->
+
+            <div class="element logins semanal Febrero-2013" >
+              <p> Logins </p>
+              <a href="http://50.116.21.144/logins-20130207-20130214.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>7 al 14 de febrero</p>
+            </div>
 
             <div class="element logins semanal Febrero-2013" >
               <p> Logins </p>
@@ -456,6 +480,14 @@
 
             <div class="element dispositivos semanal Febrero-2013" >
               <p> Dispositivos</p>
+              <a href="http://50.116.21.144/devices-20130207-20130214.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>7 al 14 de febrero</p>
+            </div>
+
+            <div class="element dispositivos semanal Febrero-2013" >
+              <p> Dispositivos</p>
               <a href="http://50.116.21.144/devices-20130131-20130207.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -563,6 +595,14 @@
             </div>
 
             <!-- POST/COMENTARIOS -->
+
+            <div class="element post_comentarios semanal Febrero-2013" >
+              <p>Post/Comentarios</p>
+              <a href="http://50.116.21.144/most_commented-20130207-20130214.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>7 al 14 de febrero</p>
+            </div>
 
             <div class="element post_comentarios semanal Febrero-2013" >
               <p> Post/Comentarios</p>
