se cambio el link del banner de duos

--- a/app/views/shared/_publicity.html.erb
+++ b/app/views/shared/_publicity.html.erb
@@ -1,1 +1,1 @@
-	<%= link_to image_tag("banner.png"), 'https://www.movistar.com.mx/movistartotalparticulares/', {:target => "_blank" } %>
+	<%= link_to image_tag("banner.png"), ' https://www.movistar.com.mx/duos-planes/?utm_source=movistar&utm_medium=bannerhero&utm_campaign=duosplanes', {:target => "_blank" } %>
