Reportes semanales y quincenales

--- a/app/views/supervisor/analytics.html.erb
+++ b/app/views/supervisor/analytics.html.erb
@@ -126,6 +126,14 @@
 
             <div class="element usuarios semanal Febrero-2013" >
               <p>Usuarios</p>
+              <a href="http://50.116.21.144/users-20130214-20130221.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>14 al 21 de febrero</p>
+            </div>
+
+            <div class="element usuarios semanal Febrero-2013" >
+              <p>Usuarios</p>
               <a href="http://50.116.21.144/users-20130207-20130214.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -198,6 +206,14 @@
 
             <!-- USUARIOS QUINCENALES -->
 
+            <div class="element usuarios quincenal Febrero-2013" >
+              <p> Usuarios</p>
+              <a href="http://50.116.21.144/users-20130201-20130215.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>1 al 15 de febrero</p>
+            </div>
+
             <div class="element usuarios quincenal Enero-2013" >
               <p> Usuarios</p>
               <a href="http://50.116.21.144/users-20130115-20130131.csv">
@@ -241,6 +257,14 @@
             </div>
 
             <!-- POSTS SEMANALES -->
+
+            <div class="element posts semanal Febrero-2013" >
+              <p> Posts</p>
+              <a href="http://50.116.21.144/posts-20130214-20130221.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>14 al 21 de febrero</p>
+            </div>
 
             <div class="element posts semanal Febrero-2013" >
               <p> Posts</p>
@@ -316,6 +340,14 @@
 
             <!-- POSTS QUINCENALES -->
              
+            <div class="element posts quincenal Febrero-2013" >
+              <p> Posts </p>
+              <a href="http://50.116.21.144/posts-20130201-20130215.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>1 al 15 de febrero</p>
+            </div>
+
             <div class="element posts quincenal Enero-2013" >
               <p> Posts </p>
               <a href="http://50.116.21.144/posts-20130115-20130131.csv">
@@ -359,6 +391,14 @@
             </div>
 
             <!-- LOGINS SEMANALES -->
+
+            <div class="element logins semanal Febrero-2013" >
+              <p>Logins </p>
+              <a href="http://50.116.21.144/logins-20130214-20130221.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>14 al 21 de febrero</p>
+            </div>
 
             <div class="element logins semanal Febrero-2013" >
               <p> Logins </p>
@@ -434,6 +474,14 @@
 
             <!-- LOGINS QUINCENALES -->
 
+            <div class="element logins quincenal Febrero-2013" >
+              <p> Logins</p>
+              <a href="http://50.116.21.144/logins-20130201-20130215.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>1 al 15 de febrero</p>
+            </div>
+
             <div class="element logins quincenal Enero-2013" >
               <p> Logins</p>
               <a href="http://50.116.21.144/logins-20130115-20130131.csv">
@@ -477,6 +525,14 @@
             </div>
 
             <!-- DISPOSITIVOS SEMANAL -->
+
+            <div class="element dispositivos semanal Febrero-2013" >
+              <p>Dispositivos</p>
+              <a href="http://50.116.21.144/devices-20130214-20130221.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>14 al 21 de febrero</p>
+            </div>
 
             <div class="element dispositivos semanal Febrero-2013" >
               <p> Dispositivos</p>
@@ -552,8 +608,16 @@
 
             <!-- DISPOSITIVOS QUINCENAL -->
 
+            <div class="element dispositivos quincenal Febrero-2013" >
+              <p>Dispositivos</p>
+              <a href="http://50.116.21.144/devices-20130201-20130215.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>1 al 15 de febrero</p>
+            </div>
+
             <div class="element dispositivos quincenal Enero-2013" >
-              <p> Dispositivos</p>
+              <p>Dispositivos</p>
               <a href="http://50.116.21.144/devices-20130115-20130131.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -561,7 +625,7 @@
             </div>
  
             <div class="element dispositivos quincenal Enero-2013" >
-              <p> Dispositivos</p>
+              <p>Dispositivos</p>
               <a href="http://50.116.21.144/devices-20130101-20130115.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -569,7 +633,7 @@
             </div>
 
             <div class="element dispositivos quincenal Diciembre-2012" >
-              <p> Dispositivos</p>
+              <p>Dispositivos</p>
               <a href="http://50.116.21.144/devices-20121215-20121231.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -595,6 +659,14 @@
             </div>
 
             <!-- POST/COMENTARIOS -->
+
+            <div class="element post_comentarios semanal Febrero-2013" >
+              <p>Post/Comentarios</p>
+              <a href="http://50.116.21.144/most_commented-20130214-20130221.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>14 al 21 de febrero</p>
+            </div>
 
             <div class="element post_comentarios semanal Febrero-2013" >
               <p>Post/Comentarios</p>
@@ -669,6 +741,14 @@
             </div>
 
             <!-- POST/COMENTARIOS QUINCENAL -->
+
+            <div class="element post_comentarios quincenal Febrero-2013" >
+              <p>Post/Comentarios</p>
+              <a href="http://50.116.21.144/most_commented-20130201-20130215.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>1 al 15 de Febrero</p>
+            </div>
 
             <div class="element post_comentarios quincenal Enero-2013" >
               <p> Post/Comentarios</p>
