Se agregan vistas y se crea una migración para asignar orden

--- a/app/views/supervisor/shared/_admin_menu.html.erb
+++ b/app/views/supervisor/shared/_admin_menu.html.erb
@@ -9,4 +9,5 @@
   <%= tab.new_user t('.new_user'), supervisor_new_user_path %>
   <%= tab.suspended t('.suspendidos'), user_suspended_path %>
   <%= tab.analytics 'Analytics', supervisor_analytics_path %>
+  <%= tab.top_users 'Tops Users', supervisor_top_users_path %>
 <% end %>
